<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_welcome"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/view_background_3"
    android:orientation="vertical"
    android:weightSum="1" >

    <TextView
        style="@style/low_center_naked"
        android:id="@+id/main_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/main_welcome" >
    </TextView>

    <RelativeLayout
        android:id="@+id/main_firstIconsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp" >

        <View
            android:id="@+id/screen_center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_margin="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/screen_center"
            android:orientation="vertical" >

            <ImageButton
                style="@style/btn_home"
                android:id="@+id/main_buttonMix"
                android:src="@drawable/icon_plus" />

            <TextView
                style="@style/low_center_naked"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/main_buttonCreate" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/screen_center"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="invisible" >

            <ImageButton
                style="@style/btn_home"
                android:id="@+id/main_buttonSaved"
                android:src="@drawable/icon_dossier" />

            <TextView
                style="@style/low_center_naked"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/main_buttonSaved" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/main_SecondIconsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/main_buttonDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/main_buttonDownload" />

        <Button
            android:id="@+id/main_buttonColorSwitcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/main_buttonColorMixer" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_ThirdIconsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/main_buttonShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/main_buttonPublish" />

        <Button
            android:id="@+id/main_buttonGrabFromOtherUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/main_buttonGrab" />
    </LinearLayout>

</LinearLayout>