<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/view_background_3"
    android:paddingLeft="15dp"
    android:paddingRight="15dp" >

    <TextView
        android:id="@+id/skincreator_lbl_title"
        style="@style/low_center_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/skincreator_creatingskin" />

    <TextView
        android:id="@+id/skincreator_lbl_donatetodesigner"
        style="@style/low_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/skincreator_lbl_title"
        android:layout_marginTop="10dp"
        android:text="@string/skincreator_disclaimer" />

    <TextView
        android:id="@+id/skincreator_lbl_designers"
        style="@style/low_naked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/skincreator_lbl_donatetodesigner"
        android:layout_marginTop="10dp"
        android:text="@string/skincreator_lbl_createdfrom" />

    <!-- Background Designer -->

    <TextView
        android:id="@+id/skincreator_lbl_backgrounddesigner"
        style="@style/low_naked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/skincreator_lbl_designers"
        android:layout_marginTop="6dp"
        android:text="@string/skincreator_lbl_background"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/skincreator_btn_donatebackground"
        style="@style/low_orange_naked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/skincreator_lbl_backgrounddesigner"
        android:layout_alignBottom="@+id/skincreator_lbl_backgrounddesigner"
        android:layout_alignParentRight="true"
        android:text="@string/skincreator_btn_donate"
        android:visibility="invisible" />

    <!-- Clock Designer -->

    <TextView
        android:id="@+id/skincreator_lbl_backgroundnumbersdesigner"
        style="@style/low_naked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/skincreator_lbl_backgrounddesigner"
        android:layout_marginTop="6dp"
        android:text="@string/skincreator_lbl_backgroundNumber"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/skincreator_btn_donatebackgroundnumbers"
        style="@style/low_orange_naked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/skincreator_lbl_backgroundnumbersdesigner"
        android:layout_alignBottom="@+id/skincreator_lbl_backgroundnumbersdesigner"
        android:layout_alignParentRight="true"
        android:text="@string/skincreator_btn_donate"
        android:visibility="invisible" />

    <!-- Numbers Designer -->

    <TextView
        android:id="@+id/skincreator_lbl_numbersdesigner"
        style="@style/low_naked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/skincreator_lbl_backgroundnumbersdesigner"
        android:layout_marginTop="6dp"
        android:text="@string/skincreator_lbl_numbers"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/skincreator_btn_donatenumbers"
        style="@style/low_orange_naked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/skincreator_lbl_numbersdesigner"
        android:layout_alignBottom="@+id/skincreator_lbl_numbersdesigner"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:text="@string/skincreator_btn_donate"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/skincreator_btn_close"
        android:layout_below="@+id/skincreator_lbl_numbersdesigner"
        android:layout_marginTop="6dp" >

        <TextView
            android:id="@+id/skincreator_lbl_progress"
            style="@style/low_naked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/skincreator_progress" />

        <ProgressBar
            android:id="@+id/skincreator_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/skincreator_lbl_progress"
            android:layout_alignTop="@+id/skincreator_lbl_progress"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/skincreator_lbl_progress"
            android:interpolator="@android:anim/cycle_interpolator"
            android:visibility="visible"
             />
        
        <TextView  android:id="@+id/skincreator_lbl_failbar"
            style="@style/low_naked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/skincreator_lbl_progress"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/skincreator_lbl_progress"
            android:text="bfkdsqlfdsjf dfsdqjkflhdsql dsqhjfdkhfsq sqhfkldqsfhdqsjfldsq"
            android:maxLines="3"
            android:visibility="gone"
             />
    </RelativeLayout>

    <Button
        android:id="@+id/skincreator_btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/skincreator_btn_close" />

</RelativeLayout>